Fixed Bug 47510 - [L3] Mobile Web uI only (tested on iPhone): Mail folder can not be added on Root-Level
Virtual folders were blocked from showing the contextmenu on mobiles. This was fixed.

(cherry picked from commit 8f75f8010b5d6338f7a48201238eff93c2d86be7)

--- a/ui/apps/themes/components/folder.less
+++ b/ui/apps/themes/components/folder.less
@@ -289,7 +289,7 @@
     }
 
     .mobile-edit-mode & {
-        .selectable:not(.virtual) {
+        .selectable {
             .folder-label {
                 color: @link-color;
                 text-decoration: underline;
